# scode

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  direct2d.c
include/: scode.h  scode_direct2d.h
src/: CMakeLists.txt
src/scode/: private.h  scode.c
src/win/: direct2d.c  utf8.c  win.c  win.h
